minio/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: ui
      port: 9090
      targetPort: 9090
  selector:
    app: minio
