minio/resources/route-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-ui
spec:
  to:
    kind: Service
    name: minio-service
  port:
    targetPort: ui
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
